홀수 개수 UI 추가
input range 추가

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
   <body>
     <h1>로또 추첨기</h1>
     <div>
+      <p>홀수 개수</p>
+      <div id="oddDiv">
+        <input id="oddCount" value="7" type="range" min="0" max="7" step="1" />
+      </div>
+      <p id="oddP">모두 랜덤</p>
       <button id="btn">돌리기</button>
       <p>추첨 번호</p>
       <p id="p">&nbsp;</p>
